autapi/tests/snapshots/derive_to_schema__using-12.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(UsingEnum::Fields { value: Nullable(Some(42)) })"
---
{
  "value": 42
}
