autapi/tests/snapshots/derive_to_schema__using-13.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(UsingEnum::Fields { value: Nullable(None) })"
---
{}
