autapi/tests/snapshots/derive_to_schema__using-15.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<UsingEnum>>(json!({}))"
---
Ok(
    SerdeAdapter(
        Fields {
            value: Nullable(
                None,
            ),
        },
    ),
)
