autapi/tests/snapshots/derive_to_schema__using-16.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<UsingEnum>>(json!({\"value\": 42}))"
---
Ok(
    SerdeAdapter(
        Fields {
            value: Nullable(
                Some(
                    42,
                ),
            ),
        },
    ),
)
