autapi/tests/snapshots/derive_to_schema__using-17.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "UsingEnum::deserialize_missing()"
---
Some(
    Tuple(
        Nullable(
            None,
        ),
    ),
)
