autapi/tests/snapshots/derive_to_schema__using-18.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "OptionalField::schema(&mut Registry::default())"
---
{
  "type": "object",
  "properties": {
    "field": {
      "type": "string"
    }
  }
}
