autapi/tests/snapshots/derive_to_schema__using-19.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<OptionalField>>(json!({}))"
---
Ok(
    SerdeAdapter(
        OptionalField {
            field: "",
        },
    ),
)
