autapi/tests/snapshots/derive_to_schema__using-2.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(UsingStruct { value: Nullable(Some(42)), })"
---
{
  "value": 42
}
