autapi/tests/snapshots/derive_to_schema__using-20.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<OptionalField>>(json!({\"field\": \"str\"}))"
---
Ok(
    SerdeAdapter(
        OptionalField {
            field: "str",
        },
    ),
)
