autapi/tests/snapshots/derive_to_schema__using-21.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(OptionalField { field: String::from(\"str\") })"
---
{
  "field": "str"
}
