autapi/tests/snapshots/derive_to_schema__using-22.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "NullableField::schema(&mut Registry::default())"
---
{
  "type": "object",
  "properties": {
    "field": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "field"
  ]
}
